fix alignment

--- a/css/popUp.css
+++ b/css/popUp.css
@@ -113,7 +113,7 @@
 }
 
 .indiv-comment-wrapper{
-    margin: 1rem 0 0 1rem;
+    
 }
 
 .lower-comment-details{
